2014-02-15  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/ClaspSolver.h: Upgrade to Clasp 3.0.
	* src/ClaspSolver.cpp: Likewise.
	* include/dlvhex2/GenuineGuessAndCheckModelGenerator.h:
	Simplify implementation.
	* src/GenuineGuessAndCheckModelGenerator.cpp: Likewise.

2014-01-26  Christoph Redl <redl@kr.tuwien.ac.at>

2014-01-07  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/PluginInterface.h: Allow plugins to provide
	custom model generators.
	* include/dlvhex2/ProgramCtx.h: Likewise.
	* src/PluginInterface.cpp: Likewise.
	* src/ProgramCtx.cpp: Likewise.

2013-12-21  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/HexGrammar.tcc: Implement disjunctions
	with variable length.
	* include/dlvhex2/HexGrammar.h: Likewise.
	* src/HexGrammar.cpp: Likewise.
	* src/InternalGrounder.cpp: Likewise.	
	* src/GringoGrounder.cpp: Likewise.	

2013-12-11  Christoph Redl <redl@kr.tuwien.ac.at>

	* checkout_build_owlcpp.cpp: Add owlcpp for
	RepairModelGenerator.
	* owlcpp/Makefile.am: Likewise.

2013-11-18  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/PhantomPlugin.cpp: Add support for dummy implementations
	of external predicates.
	* include/dlvhex2/PhantomPlugin.h: Likewise.
	* src/dlvhex.cpp: Likewise.

2013-08-19  Peter Schueller <peterschueller@sabanciuniv.edu>

	Release 2.2.0
	* NEWS: summarizing changes
	* src/Makefile.am: Increasing Version numbers.
	* configure.ac: Likewise.

2013-05-22  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/Registry.h: Introduce auxiliary variable
	symbols.
	* src/Registry.cpp: Likewise.
	* include/dlvhex2/FunctionPlugin.h: Add rewriter to transform
	Gringo function syntax to external atoms.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-27  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/FunctionPlugin.h: Implement external atoms for
	function symbol processing.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-25  Christoph Redl <redl@kr.tuwien.ac.at>
